--- a/index.html
+++ b/index.html
@@ -5,7 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>THIS IS MY FIRST WEB PAGE</h1>
+<body style="background-color: bisque;">
+    <h1 style="background-color: aquamarine; text-align: center;color: rgb(146, 60, 60);font-size: 5rem; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">sara</h1>
+    <h2>sara</h2>
+    <h3>sara</h3>
+    <h4><q>sara</q></h4>
+    <h5><abbr title="bilquish parveen">sara</abbr></h5>
+    <h6>sara</h6>
+    <!--address element-->
+    <address>
+        serorai
+        galsi
+        purba bardhaman
+
+    </address>
+    <bdo dir="rtl">i am bdo</bdo>
+    <p><cite>the gitanjali</cite> written by rn tagore</p>
+    <blockquote style="background-color: rgba(44, 189, 95, .3);color: rgb(146, 60, 60,1);">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cumque provident libero tempora at nihil ullam consectetur esse cum dolore ipsum, velit nisi architecto quo, suscipit repudiandae a ea illum accusamus ratione! Autem earum voluptatum totam adipisci quos fuga inventore laudantium porro natus aperiam nobis provident, quasi a eveniet similique ducimus. Dolorum iure deleniti, rerum quis magnam saepe ipsa dolorem quo perferendis, deserunt, consequatur amet modi adipisci. Unde earum vitae incidunt voluptatem architecto consequatur blanditiis temporibus labore recusandae corporis non cumque sequi molestias, officiis reiciendis officia expedita aliquid numquam culpa facilis omnis illo quasi. Asperiores ducimus placeat saepe nostrum voluptate!</blockquote>
+    <mark style="color: red;">i am in mark tag</mark>
+    <p>Lorem ipsum, dolor<br> sit amet consectetur adipisicing elit. Dolorem vel, ipsam, accusamus rerum neque qui reiciendis eveniet eaque numquam placeat impedit maxime libero aliquid asperiores quaerat velit cupiditate officia architecto!</p>
+    <img src="image/sara.jpg" alt="sara" width="150">
+    <br>This is my book. <br>
+    <a href="link.html" target="_blank">SARA</a>
+    <p style="background-color: rgb(255, 0, 0);text-align: center;font-size: larger;">rgb(255,0,0) </p>
+    <p style="background-color: rgb(0, 255, 0);text-align: center;font-size: larger;color: white;">rgb(0,255,0) </p>
+    <p style="background-color: rgb(0, 0, 255);text-align: center;font-size: larger;color: white;">rgb(255,0,0) </p>
+    <p style="background-color: rgb(120, 180, 100);text-align: center;font-size: larger;">rgb(255,0,0) </p>
+    <p style="background-color: #7843bd;text-align: center;font-size: larger;">rgb(255,0,0) </p>
 </body>
 </html>
